# bookmark-organizer

./: README.md  pyproject.toml
bookmark-organizer/: main.py  organizer.py  parser.py  validator.py
bookmark_organizer/: __init__.py  analyzer.py  exporter.py  main.py  validator.py
