[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookmark_organizer"
version = "0.1.0"
description = "A tool to organize and clean up browser bookmarks"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
    "html5lib>=1.1",
    "scikit-learn>=1.0.0",
    "nltk>=3.6.0",
    "tqdm>=4.60.0",
    "rich>=10.0.0",
    "pydantic>=1.9.0",
    "typer>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "ruff>=0.0.220",
    "pytest-cov>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/bookmark-organizer"
"Bug Tracker" = "https://github.com/yourusername/bookmark-organizer/issues"
"Documentation" = "https://github.com/yourusername/bookmark-organizer#readme"

[project.scripts]
bookmark-organizer = "bookmark_organizer.main:app"

[tool.hatch.build.targets.wheel]
packages = ["bookmark_organizer"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=bookmark_organizer"
testpaths = [
    "tests",
]